# kitesforfuture

./: .gitignore  README.md
.github/workflows/: kite.yml
COMMON_FILES/: RC.c  RC2.c
data_receiver/: CMakeLists.txt  D1.txt  D2.txt  D3.txt  E1.txt  E2.txt  E3.txt  E4.txt  E5.txt  E6.txt  F1.txt  F12.txt  F13.txt  F14.txt  batt1.txt  batt2.txt  batt3.txt  batt4.txt  draw.sh  init.sh  noBatt.txt  noBatt2.txt  noBatt3.txt  noBatt4.txt  noBatt5.txt  out.txt  out_orig.txt  output.txt  output123.txt  output1234.txt  output12345.txt  output123456.txt  output1234567.txt  output12345678.txt  output123456789.txt  output1234567890.txt  output12345678901.txt  output2.txt  output3.txt  output4.txt  (+35 more)
data_receiver/main/: RC.c  main.c  motors.c
espnow/: README.md  sdkconfig  sdkconfig.old
ground_station/main/: constants.c  dac.c  main.c  motors.c  my_gpio.c  pid.c  reel_in.c  sensors.c
kite/: CMakeLists.txt  README.md  out.txt  sdkconfig
kite/main/: CMakeLists.txt  PWM_input.c  constants.c  control_glide_elevator.c  control_glide_rudder.c  control_hover_elevator.c  control_hover_height.c  control_hover_rudder.c  interchip.c  main.c  motors.c  mpu6050.c  pid.c  timer.c
kite/main/kitemath/: helpers.c  helpers.h
kite/main/lib/kitemath/: CMakeLists.txt  helpers.c  helpers.h
kite/math/: CMakeLists.txt  helpers.c
kite4_raketenschwanz/: donnerstag.ods  donnerstag.txt  plot_monitor.py
kite4_raketenschwanz/main/: constants.c  main.c  pid.c  sidewaysAngle.c  timer.c
kite_esp/: sdkconfig
kite_esp/main/: constants.c  kiteSpeed.c  lineLength.c  (+6 more)
kite_fresh/: CMakeLists.txt
(+14 files in other folders)
